--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -16,6 +16,9 @@ border: 1px solid black;
 
 div#nav {
   color:lightsteelblue;
+  background-color:saddlebrown;
+  width:100%;l
+  
 }
 div#details {
   margin-right:12%;
