--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -15,7 +15,7 @@ border: 1px solid black;
 }
 
 div#nav {
-  color:gold;
+  color:silver;
   background-color:saddlebrown;
   width:100%;
   padding-bottom:4px;
