adding content background color change; testing, part un

--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -40,7 +40,8 @@ div.404 {
   text-align:left;
 }
 p.center {
-  background-color:#564E38 ;
+  background-color:white ;
+  ;background-color:#564E38 ;
 }
 p.footer {
   background-color:#564E38 ;
