adding content background color change; testing, part deaux

--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -35,12 +35,13 @@ div.width {
   text-align:left;
 }
 div.404 {
+  background-color:burlywood ;
   font-size:larger;
   width:800px;
   text-align:left;
 }
 p.center {
-  background-color:white ;
+  background-color:burlywood ;
   ;background-color:#564E38 ;
 }
 p.footer {
