--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -12,7 +12,7 @@ a#current {
 }
 body {
   background-color:black;
-  color:white;
+  color:cornsilk;
   font-size:80%;
   font-family:"Lucida Sans Unicode", "Lucida Grande", sans-serif;
   text-align:left;
@@ -20,10 +20,8 @@ body {
   margin-left:12%;
 }
 div#wrapper {
-text-align: left;
-margin: 0 auto;
-width: 900px;
-border: 1px solid black;
+  background-color:#564E38 ;
+  width:800px;
 }
 div#nav {
   color:silver;
@@ -37,8 +35,6 @@ div.footer {
   color:peru;
 }
 div.width {
-  background:burlywood ;
-  ;background-color:#564E38 ;
   width:800px;
   text-align:left;
 }
