padding content background color block of all pages; removed top abd bottom padding

--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -22,7 +22,8 @@ body {
 div#wrapper {
   background-color:#564E38 ;
   width:800px;
-  padding:2px;
+  padding-left:2px;
+  padding-right:2px;
 }
 div#nav {
   color:silver;
