--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -20,7 +20,7 @@ body {
   margin-left:12%;
 }
 div#wrapper {
-  background-color:sienna ;
+  background-color:#5E4D38;
   width:800px;
   padding-left:2px;
   padding-right:2px;
