--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -83,7 +83,12 @@ img.noborder {
 }
 /* used to style a generic block of code */
 .code {
+  margin-left:auto;
+  margin-right:auto;
+  width:70%;
+  background-color:#b0e0e6;
   font-family:monospace;
+  text-align:left
 }
 /* used to mark a public repo */
 .public {
