--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -88,14 +88,12 @@ img.noborder {
   text-align:left
 }
 /* used to mark a public repo */
-.public {
-  list-style-image: url('images/unlocked-16x16.jpg');
-  color:chartreuse;
+li.public {
+  list-style: url('images/unlocked-16x16.jpg');
 }
 /* used to mark a private repo */
-.private {
-  list-style-image: url('images/locked-16x16.jpg');
-  color:tomato;
+li.private {
+  list-style: url('images/locked-16x16.jpg');
 }
 /* self-explanatory */
 .superscript {
