copying acol_base.css and html5 logo to other gh-pages repos

--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -1,71 +1,95 @@
-/* link decoration */
-a {
-  color:burlywood;
-  text-decoration:none;
-  letter-spacing:1px;
-}
-a:hover {
-  color:gold;
-}
-a#current {
-  color:cornsilk;
-}
 body {
   background-color:black;
-  color:cornsilk;
-  font-size:80%;
-  font-family:"Lucida Sans Unicode", "Lucida Grande", sans-serif;
+  color:white; 
+  font-family:"Droid Sans", "Lucida Sans Unicode", sans-serif;
   text-align:left;
   margin-right:12%;
   margin-left:12%;
 }
-div#wrapper {
-  background-color:#5E4D38;
-  width:100%;
+div#wrapper { 
+  text-align: left; 
+  margin: 0 auto; 
+  width: 900px; 
+  /*border: 1px solid silver; */
 }
 div#nav {
   color:silver;
-  background-color:saddlebrown;
-  width:100%;
-  padding-bottom:4px;
-  padding-top:2px;
+  width: 900px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  /*border: 1px outset silver;*/
+  clear:both;
+  text-align: center;
+}
+div#details {
+  margin-right:12%;
+  text-align:justify;
+  }
+div.header {
+  width: 900px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  color:silver;
+  border: none;
+}
+div.breadcrumb {
+  float:center;
+  text-align: center;
 }
 div.footer {
   font-size:80%;
-  color:peru;
-  background-color:black;
-  width:100%;
-  padding-bottom:1px;
-  padding-top:4px;
+  color:silver;
+  width: 900px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  vertical-align: middle;
+  text-align: center;
 }
 div.width {
   width:800px;
   text-align:left;
 }
-hr {
-  background-color:peru;
-  color:peru;
-  border:0;
-  width:100%;
-}
 img {
   text-decoration:none;
-  border:thin solid;
+  border: 0 solid;
+}
+img#logo {
+  text-decoration:none;
+  border:0 solid;
+  float:right;
+}
+img.centered {
+    display: block;
+    margin-left: auto;
+    margin-right: auto 
 }
 img.noborder {
   border: 0 none;
-  padding-top:4px;
 }
-/* general css IDs for layout manipulation */
-#contact {
-  text-align:left;
+a {
+  color:dodgerblue;
+  text-decoration:none;
+  letter-spacing:1px;
 }
-#floater {
-  text-align:center;
+a:hover {
+  color:cornsilk;
+}
+a#current {
+  color:cornsilk;
 }
 #labels {
   float:left;
   text-align:right;
+}
+#contact {
+  text-align:left;
+}
+iframe {
+  float:left;
+  margin-right:64px;
+}
+#floater {
+  text-align:center;
 }
 /* used to style 404 iframe pulling data from notfound.org */
 #notfound_org {
@@ -93,19 +117,18 @@ list-style-type: none;
 padding: 0px;
 margin: 0px;
 }
+li {
+  padding-left: 10px;
+  background-repeat: no-repeat;
+  background-position: 0 2px;
+}
 /* used to mark a public repo */
 li.public {
-  padding-left: 10px;
   background-image: url(images/icon_unlocked.gif);
-  background-repeat: no-repeat;
-  background-position: 0 .5em;
 }
 /* used to mark a private repo */
 li.private {
-  padding-left: 10px;
   background-image: url(images/icon_locked.gif);
-  background-repeat: no-repeat;
-  background-position: 0 .5em;
 }
 /* self-explanatory */
 .superscript {
