clean remaining cruft from original site and perpare for eventual heroku deployment

--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -1,7 +1,7 @@
 body {
   background-color:black;
   color:white; 
-  font-family:"Droid Sans", "Lucida Sans Unicode", sans-serif;
+  font-family:"Ubuntu", "Droid Sans", "Lucida Sans Unicode", sans-serif;
   text-align:left;
   margin-right:12%;
   margin-left:12%;
