--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -1,6 +1,6 @@
 body {
-  background-color:white;
-  color:black; 
+  background-color:black;
+  color:white; 
   font-family:" Ubuntu", "Droid Sans", "Lucida Sans Unicode", sans-serif;
   text-align:left;
   margin-right:12%;
