fixing css to shrink html5 logo back down.

--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -8,7 +8,7 @@ div#wrapper {
   text-align: left; 
   width: 100%; 
   margin-left: auto;
-  margin-right: auto 
+  margin-right: auto;
 }
 div#nav {
   width: 100%;
@@ -17,13 +17,13 @@ div#nav {
   clear:both;
   text-align: center;
   margin-left: auto;
-  margin-right: auto 
+  margin-right: auto;
 }
 div#details {
   margin-right:12%;
   text-align:justify;
   margin-left: auto;
-  margin-right: auto 
+  margin-right: auto;
   }
 div.header {
   font-size: 80%;
@@ -31,7 +31,7 @@ div.header {
   padding-bottom: 5px;
   border: none;
   margin-left: auto;
-  margin-right: auto 
+  margin-right: auto;
 }
 div.footer {
   font-size:80%;
@@ -41,13 +41,13 @@ div.footer {
   vertical-align: middle;
   text-align: center;
   margin-left: auto;
-  margin-right: auto 
+  margin-right: auto;
 }
 div.width {
   width: 100%; 
   text-align:left;
   margin-left: auto;
-  margin-right: auto 
+  margin-right: auto;
 }
 img {
   text-decoration:none;
@@ -58,13 +58,20 @@ img#logo {
   border:0 solid;
   display: block;
   margin-left: auto;
-  margin-right: auto 
-
+  margin-right: auto;
+}
+img#html5-logo {
+  text-decoration:none;
+  border:0 solid;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  height: 32px;
 }
 img.centered {
   display: block;
   margin-left: auto;
-  margin-right: auto 
+  margin-right: auto;
 }
 img.noborder {
   border: 0 none;
