--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -4,6 +4,11 @@ body {
   margin-right:12%;
   margin-left:12%;
 }
+div#outer {
+  width: 900px;
+  margin-left: auto;
+  margin-right: auto;
+}
 div#wrapper { 
   text-align: left; 
   width: 100%; 
