--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -77,6 +77,7 @@ img.centered {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  max-height: 32px;
 }
 img.noborder {
   border: 0 none;
