--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -113,7 +113,7 @@ iframe {
   margin-left:auto;
   margin-right:auto;
   width:80%;
-  font-family:monospace;
+  font-family:"monospace";
   text-align:left
 }
 ul
