added pdf image to resume.html, wrote out the acommitteoflunatics about page content; part deaux.

--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -73,6 +73,9 @@ img#html5-logo {
   margin-right: auto;
   height: 32px;
 }
+img.icon {
+  float: left;
+}
 img.centered {
   text-decoration:none;
   display: block;
