adding changes from main site.

--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -1,5 +1,5 @@
 body {
-  font-family:" Ubuntu", "Droid Sans", "Lucida Sans Unicode", sans-serif;
+  font-family:"Ubuntu", "Droid Sans", "Lucida Sans Unicode", sans-serif;
   text-align:left;
   margin-right:12%;
   margin-left:12%;
@@ -25,8 +25,7 @@ div#nav {
   margin-right: auto;
 }
 div#details {
-  margin-right:12%;
-  text-align:justify;
+  text-align:center;
   margin-left: auto;
   margin-right: auto;
   }
@@ -67,21 +66,23 @@ img#logo {
 }
 img#html5-logo {
   text-decoration:none;
+  float:left;
+  border:0 solid;
+  display: block;
+  margin-left: 45%;
+  margin-right: auto;
+  padding-right: 10px;
+  max-height: 32px;
+}
+img#css3-logo {
+  text-decoration:none;
+  float:right;
   border:0 solid;
   display: block;
   margin-left: auto;
-  margin-right: auto;
-  height: 32px;
-}
-img.icon {
-  float: left;
-}
-img.centered {
-  text-decoration:none;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  max-height: 32px;
+  margin-right: 45%;
+  padding-left: 10px;
+  max-height: 33px;
 }
 img.noborder {
   border: 0 none;
@@ -118,25 +119,34 @@ iframe {
   margin-right:auto;
   width:80%;
   font-family:"monospace";
+  font-size:11px
   text-align:left
 }
-ul
-{
-list-style-type: none;
-padding: 0px;
-margin: 0px;
+ul {
+  list-style-type: none;
+  padding: 0px;
+  margin: 0px;
 }
 li {
-  padding-left: 10px;
-  background-repeat: no-repeat;
-  background-position: 0 2px;
+  list-style-type: none;
+}
+#inline li {
+  display: inline;
+  list-style-type:none;
+  float:left;
+  font-size:80%;
+  margin-right: 20px;
 }
 /* used to mark a public repo */
 li.public {
+  padding-left: 10px;
+  background-position: 0 2px;
   background-image: url(images/icon_unlocked.gif);
 }
 /* used to mark a private repo */
 li.private {
+  padding-left: 10px;
+  background-position: 0 2px;
   background-image: url(images/icon_locked.gif);
 }
 /* self-explanatory */
