--- a/css/acol_light.css
+++ b/css/acol_light.css
@@ -3,24 +3,26 @@
 /* set color-related items */
 body {
   background-color:#ffffff;
-  color:#c0c0c0; 
+  color:#9c9c9c; 
   font-family:" Ubuntu", "Droid Sans", "Lucida Sans Unicode", sans-serif;
 }
 div#wrapper { 
-  /*border: 1px solid #c0c0c0; */
+  /*border: 1px solid #9c9c9c; */
 }
 div#nav {
-  color:#c0c0c0;
-  /*border: 1px solid #c0c0c0; */
+  color:#9c9c9c;
+  /*text-shadow: 2px 2px 7px #111;
+  border: 1px solid #9c9c9c; */
 }
 div.header {
-  color:#c0c0c0;
+  color:#9c9c9c;
 }
 div.footer {
-  color:#c0c0c0;
+  color:#9c9c9c;
 }
 a {
   color:#1e90ff;
+  text-shadow: 2px 2px 7px #111;
   text-decoration:none;
   letter-spacing:1px;
 }
@@ -28,7 +30,7 @@ a:visited {
   color:#6495ED;
 }
 a#current {
-  color:#c0c0c0;
+  color:#9c9c9c;
 }
 a:hover {
   color:#a0522d;
