adjusting drop shadow color for dark css theme

--- a/css/acol_dark.css
+++ b/css/acol_dark.css
@@ -22,7 +22,7 @@ div.footer {
 }
 a {
   color:#1e90ff;
-  text-shadow: 2px 2px 7px #111;
+  text-shadow: 2px 2px 7px #aaa;
   text-decoration:none;
   letter-spacing:1px;
 }
