--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -118,7 +118,7 @@ iframe {
   margin-left:auto;
   margin-right:auto;
   width:80%;
-  font-family:"monospace";
+  font-family:"monofur", monospace;
   font-size:11px;
   text-align:left;
 }
