--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -6,10 +6,12 @@ body {
 }
 div#outer {
   width: 900px;
+  clear: both;
   margin-left: auto;
   margin-right: auto;
 }
 div#wrapper { 
+  clear: both;
   text-align: left; 
   width: 100%; 
   margin-left: auto;
@@ -30,6 +32,7 @@ div#details {
   margin-right: auto;
   }
 div.header {
+  clear: both;
   font-size: 80%;
   padding-top: 5px;
   padding-bottom: 5px;
@@ -38,6 +41,7 @@ div.header {
   margin-right: auto;
 }
 div.footer {
+  clear: both;
   font-size:80%;
   width: 100%; 
   padding-top: 5px;
@@ -48,6 +52,7 @@ div.footer {
   margin-right: auto;
 }
 div.width {
+  clear: both;
   width: 100%; 
   text-align:left;
   margin-left: auto;
@@ -118,7 +123,7 @@ iframe {
   margin-left:auto;
   margin-right:auto;
   width:80%;
-  font-family:"monofur", monospace;
+  font-family:"monofur", "Droid Sans Mono", monospace;
   font-size:11px;
   text-align:left;
 }
