--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -117,9 +117,9 @@ iframe {
   font-size:100%;
   text-align:left;
   width: 100%; 
-  
+}  
 /* used to style a generic block of code */
-.code {
+div.code {
   margin-left:auto;
   margin-right:auto;
   width:80%;
