--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -2,11 +2,11 @@
 
 }
 body {
+  background: url(images/bg-left.png) no-repeat;
   font-family:"Ubuntu", "Droid Sans", "Lucida Sans Unicode", sans-serif;
   text-align:left;
   margin-right:12%;
   margin-left:12%;
-  background: url(images/bg-left) no-repeat;
 }
 div#outer {
   width: 900px;
