--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -50,7 +50,6 @@ div#wrapper {
 }
 #primary {
   width: 100%;
-  height:28px
   margin-top: 10px;
   margin-bottom: 20px;
   padding-top: 14px;
@@ -68,7 +67,7 @@ div#wrapper {
 #primary li a {
   padding: 5px 15px;
   color: #1e90ff;
-  text-shadow: 1px 1px 1px #ccc;
+  text-shadow: 1px 1px 1px #fff;
 }
 #primary li a:hover {
   color: #9c9c9c;
