--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -67,6 +67,9 @@ div#wrapper {
   padding: 5px 15px;
   color: #1e90ff;
   text-shadow: 1px 1px 1px #fff;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
 }
 #primary li a:hover {
   color: #9c9c9c;
