--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -50,6 +50,7 @@ div#wrapper {
 }
 #primary {
   width: 100%;
+  height: 28px;
   margin-top: 5px;
   margin-bottom: 5px;
   -webkit-box-shadow: 1px 0px 3px #ccc;
