--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -30,9 +30,7 @@
 
 }
 
-body {
-  background: url(images/bg-left.png) no-repeat;
-  font-family:"NotCourierSansRegular", "Droid Sans", sans-serif;
+body {  font-family:"NotCourierSansRegular", "Droid Sans", sans-serif;
   text-align:left;
   margin-right:12%;
   margin-left:12%;
@@ -47,6 +45,10 @@ div#wrapper {
   width: 100%; 
   margin-left: auto;
   margin-right: auto;
+}
+#bg-left {
+  background: url(images/bg-left.png) no-repeat;
+  float: left;
 }
 #primary {
   width: 100%;
