continue refactor into propersemantic html5 and css3; swap nav button text case hover state.

--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -60,7 +60,7 @@ div#wrapper {
   -moz-box-shadow: 1px 0px 3px #fff;
   box-shadow: 1px 0px 3px #fff;
   font: bold 13px "NotCourierSansBold", sans-serif;
-  text-transform: uppercase;
+  text-transform: lowercase;
   letter-spacing: 1px;
 }
 #primary ul li {
