--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -70,13 +70,13 @@ div#wrapper {
 #primary li a {
   padding: 5px 15px;
   color: #1e90ff;
-  text-shadow: 1px 1px 1px #fff;
+  text-shadow: 2px 2px 7px #111;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
 }
 #primary li a:hover {
-  color: #fff;
+  color: #6495ED;
   background: #9c9c9c;
 }
 div#details {
