continue refactor into propersemantic html5 and css3; get rid of the hideous color

--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -77,7 +77,7 @@ div#wrapper {
 }
 #primary li a:hover {
   color: #6495ED;
-  background: #9c9c9c;
+  background: #eee;
 }
 div#details {
   text-align:center;
