--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -45,6 +45,8 @@ div#wrapper {
   width: 100%; 
   margin-left: auto;
   margin-right: auto;
+}
+#logo {
   background: url(images/bg-left.png) no-repeat;
   float: left;
 }
