--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -59,7 +59,7 @@ div#wrapper {
   -webkit-box-shadow: -2px -2px 7px #fff;
   -moz-box-shadow: -2px -2px 7px #fff;
   box-shadow: -2px -2px 7px #fff;
-  font: bold 15px "NotCourierSansBold", sans-serif;
+  font: bold 15px "NotCourierSansBold", Ubuntu, sans-serif;
   text-transform: lowercase;
   letter-spacing: 1px;
 }
@@ -70,7 +70,7 @@ div#wrapper {
 #primary li a {
   padding: 5px 15px;
   color: #6495ED;
-  text-shadow: 2px 2px 7px #111;
+  text-shadow: 2px 2px 7px #fff;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
