change color of navbar text background

--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -74,7 +74,7 @@ div#wrapper {
 }
 #primary li a:hover {
   color: #1e90ff;
-  background: #eee;
+  background: #111;
 }
 div#details {
   text-align:center;
