--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -66,7 +66,7 @@ div#wrapper {
 }
 #primary li a {
   padding: 5px 15px;
-  color: #6495ED;
+  color: #a0522d;
   text-shadow: 2px 2px 7px #FF9912;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
