--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -56,7 +56,7 @@ div#wrapper {
   padding-top: 12px;
   margin-top: 5px;
   margin-bottom: 5px;
-  font: bold 15px "NotCourierSansBold", Ubuntu, sans-serif;
+  font: 15px "SourceSansProRegular", Ubuntu, sans-serif;
   text-transform: lowercase;
   letter-spacing: 1px;
 }
