--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -48,11 +48,11 @@ div#wrapper {
 #primary {
   width: 100%;
   height: 28px;
-  padding-top: 12px;
+  padding-top: 11px;
   margin-top: 5px;
   margin-bottom: 5px;
   font: bold 15px "SourceSansProRegular", Ubuntu, sans-serif;
-  text-transform: lowercase;
+  text-transform: uppercase;
   letter-spacing: 1px;
 }
 #primary ul li {
