--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -31,9 +31,9 @@
 }
 
 body {  font-family:"NotCourierSansRegular", "Droid Sans", sans-serif;
-  text-align:left;
-  margin-right:12%;
-  margin-left:12%;
+  text-align:center;
+  margin-right:7%;
+  margin-left:7%;
 }
 div#wrapper { 
   text-align: left; 
@@ -44,13 +44,14 @@ div#wrapper {
 #logo {
   background: url(images/bg-left.png) no-repeat;
   float: left;
+  opacity: 1;
 }
 #primary {
   width: 100%;
-  height: 28px;
-  padding-top: 11px;
-  margin-top: 5px;
-  margin-bottom: 5px;
+  height: 32px;
+  padding-top: 13px;
+  margin-top: 7px;
+  margin-bottom: 7px;
   font: bold 15px "SourceSansProRegular", Ubuntu, sans-serif;
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -62,7 +63,7 @@ div#wrapper {
 #primary li a {
   padding: 5px 15px;
   color: #6495ED;
-  text-shadow: 2px 2px 7px #FF9912;
+  text-shadow: 2px 2px 3px #FF9912;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
