--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -40,9 +40,7 @@ div#wrapper {
   width: 800px; 
   margin-left: auto;
   margin-right: auto;
-}
-#logo {
-  background: url(../images/bg-left.png) no-repeat;
+  background: url(../images/bg-left.png) right top no-repeat;
   float: left;
   opacity: 1;
 }
