--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -40,9 +40,7 @@ div#wrapper {
   width: 800px; 
   margin-left: auto;
   margin-right: auto;
-  background: url(../images/bg-left.png) right top no-repeat;
-  float: left;
-  opacity: 1;
+  background: url(../images/bg-left.png) left top no-repeat;
 }
 #primary {
   width: 100%;
