--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -45,6 +45,7 @@ div#wrapper {
 #primary {
   width: 100%;
   height: 32px;
+  text-align:center;
   padding-top: 13px;
   margin-top: 7px;
   margin-bottom: 7px;
