--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -59,14 +59,17 @@ div#wrapper {
 #primary li a {
   padding: 5px 15px;
   color: #6495ED;
-  text-shadow: 2px 2px 3px #FF9912;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
+  text-shadow: 2px 2px 4px #FF9912;
+  -webkit-border-top-left-radius: 4px;
+  -moz-border-radius-topleft: 4px;
+  border-radius-top-left: 4px;
+  -webkit-border-bottom-right-radius: 4px;
+  -moz-border-radius-bottomright: 4px;
+  border-radius-bottom-right: 4px;
 }
 #primary li a:hover {
   color: #1e90ff;
-  background: #292421;
+  background: #212121;
 }
 div#details {
   text-align:center;
