some minor css adjustments to color

--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -42,6 +42,14 @@ div#wrapper {
   margin-left: auto;
   margin-right: auto;
 }
+#company {
+  color: #6495ED;
+  text-shadow: 2px 2px 4px #FF9912;
+}
+#slogan {
+  color: #6495ED;
+  text-shadow: 2px 2px 4px #FF9912;
+}
 #primary {
   height: 32px;
   text-align:center;
