--- a/css/acol_base.css
+++ b/css/acol_base.css
@@ -45,6 +45,9 @@ div#wrapper {
 #company {
   color: #6495ED;
   text-shadow: 2px 2px 4px #FF9912;
+  -webkit-transform: scale(1.3);
+  -moz-transform: scale(1.3);
+  transform: scale(1.3);
 }
 #slogan {
   color: #6495ED;
